// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hydrate base hydrate 1`] = `"<meta id="styils-css-cache" name="styils-cache" mode="none" content="css-2694385428"><style data-ssr="styils-css-ssr">.css-2694385428{background-color:gainsboro;border-radius:9999px;}</style>"`;

exports[`hydrate base hydrate 2`] = `
<html>
  <head>
    <meta
      content="css-2242710476"
      id="styils-css-cache"
      name="styils-cache"
    />
  </head>
  <body />
</html>
`;

exports[`hydrate createGlobal hydrate 1`] = `"<meta id="styils-css-cache" name="styils-cache" mode="none" content=""><style data-ssr="styils-css-ssr-global">body{background-color:gainsboro;border-radius:9999px;}</style>"`;

exports[`hydrate createGlobal hydrate 2`] = `
<html>
  <head>
    <meta
      content=""
      id="styils-css-cache"
      mode="none"
      name="styils-cache"
    />
  </head>
  <body />
</html>
`;

exports[`hydrate createGlobal hydrate 3`] = `"<meta id="styils-css-cache" name="styils-cache" mode="none" content="">"`;

exports[`hydrate createGlobal hydrate 4`] = `
<html>
  <head>
    <meta
      content=""
      id="styils-css-cache"
      mode="none"
      name="styils-cache"
    />
  </head>
  <body />
</html>
`;

exports[`hydrate createGlobal hydrate with sourcemap 1`] = `
<html>
  <head>
    <meta
      content="css-2242710476"
      id="styils-css-cache"
      mode="none"
      name="styils-cache"
    />
  </head>
  <body />
</html>
`;

exports[`hydrate mix hydrate 1`] = `"<meta id="styils-css-cache" name="styils-cache" mode="none" content="css-2694385428"><style data-ssr="styils-css-ssr">.css-2694385428{background-color:gainsboro;border-radius:9999px;}</style>"`;

exports[`hydrate namespace hydrate 1`] = `"<meta id="styils-css-cache" name="styils-cache" mode="none" content="ssr-css-2694385428|ssr-css-2694385428.ssr-size-max|ssr-css-2694385428.ssr-size-small"><style data-ssr="styils-css-ssr">.ssr-css-2694385428{background-color:gainsboro;border-radius:9999px;}.ssr-css-2694385428.ssr-size-max{font-size:12px;}.ssr-css-2694385428.ssr-size-small{font-size:14px;}</style>"`;

exports[`hydrate namespace hydrate 2`] = `
<html>
  <head>
    <meta
      content="ssr-css-2242710476|ssr-css-2242710476.ssr-size-max|ssr-css-2242710476.ssr-size-small"
      id="styils-css-cache"
      name="styils-cache"
    />
  </head>
  <body />
</html>
`;

exports[`hydrate production css content 1`] = `
<div>
  <meta
    content="css-2694385428|css-891380795"
    id="styils-css-cache"
    mode="none"
    name="styils-cache"
  />
  <style
    id="styils-css-ssr-global"
  />
  <style
    id="styils-css-ssr"
  >
    .css-2694385428{background-color:gainsboro;border-radius:9999px;}.css-891380795{background-color:gainsboro;border-radius:999px;}
  </style>
</div>
`;

exports[`hydrate render Element hydrate 1`] = `
<div>
  <meta
    content="css-2694385428"
    id="styils-css-cache"
    mode="none"
    name="styils-cache"
  />
  <style
    data-ssr="styils-css-ssr"
  >
    .css-2694385428{background-color:gainsboro;border-radius:9999px;}
  </style>
</div>
`;

exports[`hydrate variants hydrate 1`] = `"<meta id="styils-css-cache" name="styils-cache" mode="none" content="css-2694385428|css-2694385428.size-max|css-2694385428.size-small"><style data-ssr="styils-css-ssr">.css-2694385428{background-color:gainsboro;border-radius:9999px;}.css-2694385428.size-max{font-size:12px;}.css-2694385428.size-small{font-size:14px;}</style>"`;

exports[`hydrate variants hydrate 2`] = `
<html>
  <head>
    <meta
      content="css-2242710476|css-2242710476.size-max|css-2242710476.size-small"
      id="styils-css-cache"
      name="styils-cache"
    />
  </head>
  <body />
</html>
`;

exports[`reactjs system createGlobal 1`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      body{background-color:#fff;}
    </style>
  </head>
  <body />
</html>
`;

exports[`reactjs system createGlobal with sourceMap 1`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      body{background-color:#fff;}sourceMap
    </style>
  </head>
  <body />
</html>
`;

exports[`reactjs system createSystem 1`] = `
<div>
  <div
    data-testid="use-system"
  >
    <button
      class="css-2747469527"
    />
    light
  </div>
</div>
`;

exports[`reactjs system createSystem 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-2747469527{color:red;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="use-system"
      >
        <button
          class="css-2747469527"
        />
        light
      </div>
    </div>
  </body>
</html>
`;

exports[`reactjs system createSystem 3`] = `
<div>
  <div
    data-testid="use-system"
  >
    <button
      class="css-2705244136"
    />
    dark
  </div>
</div>
`;

exports[`reactjs system createSystem 4`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-2747469527{color:red;}
    </style>
    <style
      data-styils="css"
    >
      
      .css-2705244136{color:blue;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="use-system"
      >
        <button
          class="css-2705244136"
        />
        dark
      </div>
    </div>
  </body>
</html>
`;

exports[`reactjs system styled 1`] = `
<div>
  <button
    class="css-473669310"
  />
</div>
`;

exports[`reactjs system styled 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-473669310{background-color:gainsboro;border-radius:9999px;font-weight:500;padding:0.75em 1em;border:0px;transition:all 200ms ease;}.css-473669310:hover{transform:translateY(-2px);box-shadow:0 10px 25px rgba(0, 0, 0, .3);}
    </style>
  </head>
  <body>
    <div>
      <button
        class="css-473669310"
      />
    </div>
  </body>
</html>
`;

exports[`reactjs system styled className 1`] = `
<div>
  <button
    class="foo css-1985958484"
  />
</div>
`;

exports[`reactjs system styled className 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-1985958484{background-color:gainsboro;}
    </style>
  </head>
  <body>
    <div>
      <button
        class="foo css-1985958484"
      />
    </div>
  </body>
</html>
`;

exports[`reactjs system styled multiple Variants 1`] = `
<div>
  <button
    class="css-1985958484 outer-true fixed-true"
  />
</div>
`;

exports[`reactjs system styled namespace 1`] = `
<div>
  <button
    class="button-css-580686147"
  />
</div>
`;

exports[`reactjs system styled production 1`] = `
<div>
  <button
    class="css-580686147"
  />
</div>
`;

exports[`reactjs system styled with css state 1`] = `
<div>
  <button
    class="css-343506865"
    style="--css-343506865-bg: red;"
  >
    red
  </button>
</div>
`;

exports[`reactjs system styled with css state 2`] = `
<div>
  <button
    class="css-343506865"
    style="--css-343506865-bg: blue;"
  >
    blue
  </button>
</div>
`;

exports[`reactjs system styled with sourceMap 1`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-1985958484{background-color:gainsboro;}1
    </style>
  </head>
  <body />
</html>
`;

exports[`reactjs system styled with styled components 1`] = `
<div>
  <button
    class="css-2747469527 css-3125152289"
  />
</div>
`;

exports[`reactjs system styled with styled components 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-3125152289{background-color:#fff;}
    </style>
    <style
      data-styils="css"
    >
      
      .css-2747469527{color:red;}
    </style>
  </head>
  <body>
    <div>
      <button
        class="css-2747469527 css-3125152289"
      />
    </div>
  </body>
</html>
`;

exports[`reactjs system styled with theme and sourceMap 1`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-4168311147{background-color:red;}1
    </style>
  </head>
  <body>
    <div>
      <button
        class="css-4168311147"
      >
        light
      </button>
    </div>
  </body>
</html>
`;

exports[`reactjs system styled with theme and sourceMap 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-4168311147{background-color:red;}1
    </style>
    <style
      data-styils="css"
    >
      
      .css-181359692{background-color:blue;}1
    </style>
  </head>
  <body>
    <div>
      <button
        class="css-181359692"
      >
        dark
      </button>
    </div>
  </body>
</html>
`;

exports[`reactjs system theme does not render repeatedly 1`] = `
<div>
  <div
    data-testid="use-system"
  >
    <button
      class="css-2747469527"
    />
    light
  </div>
</div>
`;

exports[`reactjs system theme does not render repeatedly 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-2747469527{color:red;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="use-system"
      >
        <button
          class="css-2747469527"
        />
        light
      </div>
    </div>
  </body>
</html>
`;

exports[`reactjs system theme does not render repeatedly 3`] = `
<div>
  <div
    data-testid="use-system"
  >
    <button
      class="css-2705244136"
    />
    dark
  </div>
</div>
`;

exports[`reactjs system theme does not render repeatedly 4`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-2747469527{color:red;}
    </style>
    <style
      data-styils="css"
    >
      
      .css-2705244136{color:blue;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="use-system"
      >
        <button
          class="css-2705244136"
        />
        dark
      </div>
    </div>
  </body>
</html>
`;

exports[`reactjs system theme does not render repeatedly 5`] = `
<div>
  <div
    data-testid="use-system"
  >
    <button
      class="css-2747469527"
    />
    light
  </div>
</div>
`;

exports[`reactjs system theme does not render repeatedly 6`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-2747469527{color:red;}
    </style>
    <style
      data-styils="css"
    >
      
      .css-2705244136{color:blue;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="use-system"
      >
        <button
          class="css-2747469527"
        />
        light
      </div>
    </div>
  </body>
</html>
`;

exports[`reactjs system variants 1`] = `
<div>
  <div
    data-testid="styled-variants"
  >
    <button
      class="css-2747469527 size-small"
    >
      small
    </button>
  </div>
</div>
`;

exports[`reactjs system variants 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-2747469527{color:red;}.css-2747469527.size-max{font-size:99px;}.css-2747469527.size-small{font-size:14px;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="styled-variants"
      >
        <button
          class="css-2747469527 size-small"
        >
          small
        </button>
      </div>
    </div>
  </body>
</html>
`;

exports[`reactjs system variants 3`] = `
<div>
  <div
    data-testid="styled-variants"
  >
    <button
      class="css-2747469527 size-max"
    >
      max
    </button>
  </div>
</div>
`;

exports[`reactjs system variants 4`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-2747469527{color:red;}.css-2747469527.size-max{font-size:99px;}.css-2747469527.size-small{font-size:14px;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="styled-variants"
      >
        <button
          class="css-2747469527 size-max"
        >
          max
        </button>
      </div>
    </div>
  </body>
</html>
`;

exports[`reactjs system variants single 1`] = `
<div>
  <div
    data-testid="styled-variants"
  >
    <button
      class="css-2747469527 size-small"
    >
      small
    </button>
  </div>
</div>
`;

exports[`reactjs system variants single 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-2747469527{color:red;}.css-2747469527.size-small{font-size:14px;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="styled-variants"
      >
        <button
          class="css-2747469527 size-small"
        >
          small
        </button>
      </div>
    </div>
  </body>
</html>
`;

exports[`reactjs system variants single 3`] = `
<div>
  <div
    data-testid="styled-variants"
  >
    <button
      class="css-2747469527"
    />
  </div>
</div>
`;

exports[`reactjs system variants single 4`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-2747469527{color:red;}.css-2747469527.size-small{font-size:14px;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="styled-variants"
      >
        <button
          class="css-2747469527"
        />
      </div>
    </div>
  </body>
</html>
`;

exports[`reactjs system variants theme 1`] = `
<div>
  <div
    data-testid="use-system"
  >
    <button
      class="css-2747469527 color-light"
    />
    light
  </div>
</div>
`;

exports[`reactjs system variants theme 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-2747469527{color:red;}.css-2747469527.color-light{color:red;}.css-2747469527.color-dark{color:red;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="use-system"
      >
        <button
          class="css-2747469527 color-light"
        />
        light
      </div>
    </div>
  </body>
</html>
`;

exports[`reactjs system variants theme 3`] = `
<div>
  <div
    data-testid="use-system"
  >
    <button
      class="css-2747469527 color-dark"
    />
    dark
  </div>
</div>
`;

exports[`reactjs system variants theme 4`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-2747469527{color:red;}.css-2747469527.color-light{color:red;}.css-2747469527.color-dark{color:red;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="use-system"
      >
        <button
          class="css-2747469527 color-dark"
        />
        dark
      </div>
    </div>
  </body>
</html>
`;

exports[`reactjs system with theme createGlobal 1`] = `
<div>
  <div>
    light
  </div>
</div>
`;

exports[`reactjs system with theme createGlobal 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      body{background-color:blue;}
    </style>
  </head>
  <body>
    <div>
      <div>
        light
      </div>
    </div>
  </body>
</html>
`;

exports[`reactjs system with theme createGlobal 3`] = `
<div>
  <div>
    dark
  </div>
</div>
`;

exports[`reactjs system with theme createGlobal 4`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      body{background-color:red;}
    </style>
  </head>
  <body>
    <div>
      <div>
        dark
      </div>
    </div>
  </body>
</html>
`;

exports[`reactjs system with theme createGlobal 5`] = `
<div>
  <div>
    light
  </div>
</div>
`;

exports[`reactjs system with theme createGlobal 6`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      body{background-color:blue;}
    </style>
  </head>
  <body>
    <div>
      <div>
        light
      </div>
    </div>
  </body>
</html>
`;

exports[`reactjs system with theme createGlobal and sourcemap 1`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      body{background-color:red;}1
    </style>
  </head>
  <body>
    <div>
      <div>
        dark
      </div>
    </div>
  </body>
</html>
`;
